--- a/abajaj_modeling_binned.ipynb
+++ b/abajaj_modeling_binned.ipynb
@@ -50,12 +50,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "cbe8314a-60a7-4de8-be72-620b659ef79d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting ipyplot\n",
+      "  Downloading ipyplot-1.1.1-py3-none-any.whl (13 kB)\n",
+      "Requirement already satisfied: IPython in /home/ubuntu/capstone/lib/python3.10/site-packages (from ipyplot) (8.11.0)\n",
+      "Requirement already satisfied: pillow in /home/ubuntu/capstone/lib/python3.10/site-packages (from ipyplot) (9.4.0)\n",
+      "Requirement already satisfied: numpy in /home/ubuntu/capstone/lib/python3.10/site-packages (from ipyplot) (1.23.5)\n",
+      "Collecting shortuuid\n",
+      "  Downloading shortuuid-1.0.11-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: backcall in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (0.2.0)\n",
+      "Requirement already satisfied: matplotlib-inline in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (0.1.6)\n",
+      "Requirement already satisfied: pexpect>4.3 in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (4.8.0)\n",
+      "Requirement already satisfied: decorator in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (5.1.1)\n",
+      "Requirement already satisfied: traitlets>=5 in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (5.9.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (0.18.2)\n",
+      "Requirement already satisfied: stack-data in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (0.6.2)\n",
+      "Requirement already satisfied: pickleshare in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (0.7.5)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (2.14.0)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30 in /home/ubuntu/capstone/lib/python3.10/site-packages (from IPython->ipyplot) (3.0.38)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /home/ubuntu/capstone/lib/python3.10/site-packages (from jedi>=0.16->IPython->ipyplot) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /home/ubuntu/capstone/lib/python3.10/site-packages (from pexpect>4.3->IPython->ipyplot) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /home/ubuntu/capstone/lib/python3.10/site-packages (from prompt-toolkit!=3.0.37,<3.1.0,>=3.0.30->IPython->ipyplot) (0.2.6)\n",
+      "Requirement already satisfied: pure-eval in /home/ubuntu/capstone/lib/python3.10/site-packages (from stack-data->IPython->ipyplot) (0.2.2)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /home/ubuntu/capstone/lib/python3.10/site-packages (from stack-data->IPython->ipyplot) (2.2.1)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /home/ubuntu/capstone/lib/python3.10/site-packages (from stack-data->IPython->ipyplot) (1.2.0)\n",
+      "Requirement already satisfied: six in /home/ubuntu/capstone/lib/python3.10/site-packages (from asttokens>=2.1.0->stack-data->IPython->ipyplot) (1.16.0)\n",
+      "Installing collected packages: shortuuid, ipyplot\n",
+      "Successfully installed ipyplot-1.1.1 shortuuid-1.0.11\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install numpy tensorflow matplotlib scipy\n",
     "# # !pip install pandas\n",
@@ -63,7 +96,8 @@
     "# !pip install scikit-learn\n",
     "# !pip install imagecodecs\n",
     "# !pip install tensorflow-addons\n",
-    "# !pip install numba "
+    "# !pip install numba\n",
+    "# !pip install ipyplot"
    ]
   },
   {
@@ -1631,8 +1665,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b9890662-f947-43d6-8fdc-4bd466c98f71",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import ipyplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fdea0c84-520c-47fa-ba59-4f3615a5b1d3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <style>\n",
+       "        #ipyplot-html-viewer-toggle-2peQKtGTSnVTkpyr9TRsii {\n",
+       "            position: absolute;\n",
+       "            top: -9999px;\n",
+       "            left: -9999px;\n",
+       "            visibility: hidden;\n",
+       "        }\n",
+       "\n",
+       "        #ipyplot-html-viewer-label-2peQKtGTSnVTkpyr9TRsii { \n",
+       "            position: relative;\n",
+       "            display: inline-block;\n",
+       "            cursor: pointer;\n",
+       "            color: blue;\n",
+       "            text-decoration: underline;\n",
+       "        }\n",
+       "\n",
+       "        #ipyplot-html-viewer-textarea-2peQKtGTSnVTkpyr9TRsii {\n",
+       "            background: lightgrey;\n",
+       "            width: 100%;\n",
+       "            height: 0px;\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        #ipyplot-html-viewer-toggle-2peQKtGTSnVTkpyr9TRsii:checked ~ #ipyplot-html-viewer-textarea-2peQKtGTSnVTkpyr9TRsii {\n",
+       "            height: 200px;\n",
+       "            display: block;\n",
+       "        }\n",
+       "\n",
+       "        #ipyplot-html-viewer-toggle-2peQKtGTSnVTkpyr9TRsii:checked + #ipyplot-html-viewer-label-2peQKtGTSnVTkpyr9TRsii:after {\n",
+       "            content: \"hide html\";\n",
+       "            position: absolute;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "            right: 0;\n",
+       "            bottom: 0;\n",
+       "            background: white;\n",
+       "            cursor: pointer;\n",
+       "            color: blue;\n",
+       "            text-decoration: underline;\n",
+       "        }\n",
+       "    </style>\n",
+       "    <div>\n",
+       "        <input type=\"checkbox\" id=\"ipyplot-html-viewer-toggle-2peQKtGTSnVTkpyr9TRsii\">\n",
+       "        <label id=\"ipyplot-html-viewer-label-2peQKtGTSnVTkpyr9TRsii\" for=\"ipyplot-html-viewer-toggle-2peQKtGTSnVTkpyr9TRsii\">show html</label>\n",
+       "        <textarea id=\"ipyplot-html-viewer-textarea-2peQKtGTSnVTkpyr9TRsii\" readonly>\n",
+       "            \n",
+       "        <style>\n",
+       "        #ipyplot-imgs-container-div-6EXfcgStk2QJwGvC2jh8tm {\n",
+       "            width: 100%;\n",
+       "            height: 100%;\n",
+       "            margin: 0%;\n",
+       "            overflow: auto;\n",
+       "            position: relative;\n",
+       "            overflow-y: scroll;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-placeholder-div-6EXfcgStk2QJwGvC2jh8tm {\n",
+       "            width: 250px;\n",
+       "            display: inline-block;\n",
+       "            margin: 3px;\n",
+       "            position: relative;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm {\n",
+       "            width: 250px;\n",
+       "            background: white;\n",
+       "            display: inline-block;\n",
+       "            vertical-align: top;\n",
+       "            text-align: center;\n",
+       "            position: relative;\n",
+       "            border: 2px solid #ddd;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span.ipyplot-img-close {\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span {\n",
+       "            width: 100%;\n",
+       "            height: 100%;\n",
+       "            position: absolute;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm img {\n",
+       "            width: 250px;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span.ipyplot-img-close:hover {\n",
+       "            cursor: zoom-out;\n",
+       "        }\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span.ipyplot-img-expand:hover {\n",
+       "            cursor: zoom-in;\n",
+       "        }\n",
+       "\n",
+       "        div[id^=ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm]:target {\n",
+       "            transform: scale(2.5);\n",
+       "            transform-origin: left top;\n",
+       "            z-index: 5000;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "            position: absolute;\n",
+       "        }\n",
+       "\n",
+       "        div[id^=ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm]:target span.ipyplot-img-close {\n",
+       "            display: block;\n",
+       "        }\n",
+       "\n",
+       "        div[id^=ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm]:target span.ipyplot-img-expand {\n",
+       "            display: none;\n",
+       "        }\n",
+       "        </style>\n",
+       "    <div id=\"ipyplot-imgs-container-div-6EXfcgStk2QJwGvC2jh8tm\">\n",
+       "    <div class=\"ipyplot-placeholder-div-6EXfcgStk2QJwGvC2jh8tm\">\n",
+       "        <div id=\"ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm-d2NCeFmP9yg2N6V2cm964R\" class=\"ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm\">\n",
+       "            <h4 style=\"font-size: 12px; word-wrap: break-word;\">0</h4>\n",
+       "            <h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 95%; word-wrap: break-word; white-space: normal;\">Satellite_Imagery/Satellite_Images_Tiled/105.tif</h4><img src=\"Satellite_Imagery/Satellite_Images_Tiled/105.tif\"/>\n",
+       "            <a href=\"#!\">\n",
+       "                <span class=\"ipyplot-img-close\"/>\n",
+       "            </a>\n",
+       "            <a href=\"#ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm-d2NCeFmP9yg2N6V2cm964R\">\n",
+       "                <span class=\"ipyplot-img-expand\"/>\n",
+       "            </a>\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    </div>\n",
+       "        </textarea>\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <style>\n",
+       "        #ipyplot-imgs-container-div-6EXfcgStk2QJwGvC2jh8tm {\n",
+       "            width: 100%;\n",
+       "            height: 100%;\n",
+       "            margin: 0%;\n",
+       "            overflow: auto;\n",
+       "            position: relative;\n",
+       "            overflow-y: scroll;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-placeholder-div-6EXfcgStk2QJwGvC2jh8tm {\n",
+       "            width: 250px;\n",
+       "            display: inline-block;\n",
+       "            margin: 3px;\n",
+       "            position: relative;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm {\n",
+       "            width: 250px;\n",
+       "            background: white;\n",
+       "            display: inline-block;\n",
+       "            vertical-align: top;\n",
+       "            text-align: center;\n",
+       "            position: relative;\n",
+       "            border: 2px solid #ddd;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span.ipyplot-img-close {\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span {\n",
+       "            width: 100%;\n",
+       "            height: 100%;\n",
+       "            position: absolute;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm img {\n",
+       "            width: 250px;\n",
+       "        }\n",
+       "\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span.ipyplot-img-close:hover {\n",
+       "            cursor: zoom-out;\n",
+       "        }\n",
+       "        div.ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm span.ipyplot-img-expand:hover {\n",
+       "            cursor: zoom-in;\n",
+       "        }\n",
+       "\n",
+       "        div[id^=ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm]:target {\n",
+       "            transform: scale(2.5);\n",
+       "            transform-origin: left top;\n",
+       "            z-index: 5000;\n",
+       "            top: 0;\n",
+       "            left: 0;\n",
+       "            position: absolute;\n",
+       "        }\n",
+       "\n",
+       "        div[id^=ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm]:target span.ipyplot-img-close {\n",
+       "            display: block;\n",
+       "        }\n",
+       "\n",
+       "        div[id^=ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm]:target span.ipyplot-img-expand {\n",
+       "            display: none;\n",
+       "        }\n",
+       "        </style>\n",
+       "    <div id=\"ipyplot-imgs-container-div-6EXfcgStk2QJwGvC2jh8tm\">\n",
+       "    <div class=\"ipyplot-placeholder-div-6EXfcgStk2QJwGvC2jh8tm\">\n",
+       "        <div id=\"ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm-d2NCeFmP9yg2N6V2cm964R\" class=\"ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm\">\n",
+       "            <h4 style=\"font-size: 12px; word-wrap: break-word;\">0</h4>\n",
+       "            <h4 style=\"font-size: 9px; padding-left: 10px; padding-right: 10px; width: 95%; word-wrap: break-word; white-space: normal;\">Satellite_Imagery/Satellite_Images_Tiled/105.tif</h4><img src=\"Satellite_Imagery/Satellite_Images_Tiled/105.tif\"/>\n",
+       "            <a href=\"#!\">\n",
+       "                <span class=\"ipyplot-img-close\"/>\n",
+       "            </a>\n",
+       "            <a href=\"#ipyplot-content-div-6EXfcgStk2QJwGvC2jh8tm-d2NCeFmP9yg2N6V2cm964R\">\n",
+       "                <span class=\"ipyplot-img-expand\"/>\n",
+       "            </a>\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ipyplot.plot_images(\n",
+    "    ['/home/ubuntu/210_Capstone_Aditya_Arisa_Noriel/Satellite_Imagery/Satellite_Images_Tiled/105.tif'],\n",
+    "    img_width=250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc932b72-348b-4206-8621-fb3298ed8e0e",
    "metadata": {},
    "outputs": [],
    "source": []
