test train split attempt cancel

--- a/Noriel - Train Test Split - Attempt 1.ipynb
+++ b/Noriel - Train Test Split - Attempt 1.ipynb
@@ -1095,16 +1095,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
+       "      <th>Tile_ID</th>\n",
+       "      <th>Long2</th>\n",
+       "      <th>Lat2</th>\n",
+       "      <th>Long1</th>\n",
+       "      <th>Lat1</th>\n",
+       "      <th>Mid_lat</th>\n",
+       "      <th>Mid_long</th>\n",
+       "      <th>Stop_Signs</th>\n",
+       "      <th>Paving_historical</th>\n",
+       "      <th>Paving_future</th>\n",
        "      <th>...</th>\n",
        "      <th>111338</th>\n",
        "      <th>111339</th>\n",
@@ -1245,26 +1245,26 @@
        "</div>"
       ],
       "text/plain": [
-       "    0           1          2           3          4          5       \\\n",
+       "   Tile_ID       Long2       Lat2       Long1       Lat1    Mid_lat  \\\n",
        "0  10993.0 -122.406136  37.750721 -122.404991  37.749817  37.750271   \n",
        "1  13338.0 -122.383331  37.710056 -122.382195  37.709156  37.709606   \n",
        "2  10163.0 -122.414116  37.773312 -122.412979  37.772408  37.772858   \n",
        "3   7523.0 -122.440338  37.768791 -122.439201  37.767887  37.768341   \n",
        "4  10314.0 -122.412979  37.740780 -122.411835  37.739876  37.740330   \n",
        "\n",
-       "       6       7       8       9       ...  111338  111339  111340  111341  \\\n",
-       "0 -122.405563     0.0     0.0     0.0  ...    84.0   129.0   158.0   154.0   \n",
-       "1 -122.382767     0.0     0.0     0.0  ...   114.0   118.0   147.0   141.0   \n",
-       "2 -122.413544     0.0     0.0     0.0  ...   161.0   112.0   166.0   169.0   \n",
-       "3 -122.439766     1.0     0.0     0.0  ...    52.0    98.0    64.0    81.0   \n",
-       "4 -122.412407     2.0     0.0     0.0  ...    60.0    26.0    53.0    64.0   \n",
+       "     Mid_long  Stop_Signs  Paving_historical  Paving_future  ...  111338  \\\n",
+       "0 -122.405563         0.0                0.0            0.0  ...    84.0   \n",
+       "1 -122.382767         0.0                0.0            0.0  ...   114.0   \n",
+       "2 -122.413544         0.0                0.0            0.0  ...   161.0   \n",
+       "3 -122.439766         1.0                0.0            0.0  ...    52.0   \n",
+       "4 -122.412407         2.0                0.0            0.0  ...    60.0   \n",
        "\n",
-       "   111342  111343  111344  111345  111346  111347  \n",
-       "0   104.0   175.0   149.0   145.0   106.0   177.0  \n",
-       "1   113.0   132.0   155.0   147.0   119.0   130.0  \n",
-       "2   159.0   107.0   173.0   172.0   163.0   120.0  \n",
-       "3    55.0   101.0    54.0    66.0    49.0    78.0  \n",
-       "4    57.0    32.0    60.0    68.0    61.0    36.0  \n",
+       "   111339  111340  111341  111342  111343  111344  111345  111346  111347  \n",
+       "0   129.0   158.0   154.0   104.0   175.0   149.0   145.0   106.0   177.0  \n",
+       "1   118.0   147.0   141.0   113.0   132.0   155.0   147.0   119.0   130.0  \n",
+       "2   112.0   166.0   169.0   159.0   107.0   173.0   172.0   163.0   120.0  \n",
+       "3    98.0    64.0    81.0    55.0   101.0    54.0    66.0    49.0    78.0  \n",
+       "4    26.0    53.0    64.0    57.0    32.0    60.0    68.0    61.0    36.0  \n",
        "\n",
        "[5 rows x 111348 columns]"
       ]
@@ -1276,6 +1276,58 @@
    ],
    "source": [
     "x_train_df = pd.DataFrame(x_train_array)\n",
+    "x_train_df.rename(columns = {0:'Tile_ID', \n",
+    "                             1:'Long2', \n",
+    "                             2:'Lat2', \n",
+    "                             3:'Long1', \n",
+    "                             4:'Lat1', \n",
+    "                             5:'Mid_lat', \n",
+    "                             6:'Mid_long',\n",
+    "                             7:'Stop_Signs', \n",
+    "                             8:'Paving_historical', \n",
+    "                             9:'Paving_future', \n",
+    "                             10:'Bus_stop',\n",
+    "                             11:'Collisions_Future', \n",
+    "                             12:'Collisions_Historical', \n",
+    "                             13:'RTTYP_I', \n",
+    "                             14:'RTTYP_M',\n",
+    "                             15:'RTTYP_O', \n",
+    "                             16:'RTTYP_S', \n",
+    "                             17:'RTTYP_U', \n",
+    "                             18:'Collisions_Future_binary',\n",
+    "                             19:'Collisions_Historical_binary', \n",
+    "                             20:'bins_numeric', \n",
+    "                             21:'zip_code', \n",
+    "                             22:'94101',\n",
+    "                             23:'94102', \n",
+    "                             24:'94104', \n",
+    "                             25:'94105', \n",
+    "                             26:'94107', \n",
+    "                             27:'94108', \n",
+    "                             28:'94109', \n",
+    "                             29:'94110', \n",
+    "                             30:'94111',\n",
+    "                             31:'94112', \n",
+    "                             32:'94114', \n",
+    "                             33:'94115', \n",
+    "                             34:'94116', \n",
+    "                             35:'94117', \n",
+    "                             36:'94118', \n",
+    "                             37:'94121', \n",
+    "                             38:'94122',\n",
+    "                             39:'94123', \n",
+    "                             40:'94124', \n",
+    "                             41:'94127', \n",
+    "                             42:'94129', \n",
+    "                             43:'94130', \n",
+    "                             44:'94131', \n",
+    "                             45:'94132', \n",
+    "                             46:'94133',\n",
+    "                             47:'94134', \n",
+    "                             48:'94141', \n",
+    "                             49:'94143', \n",
+    "                             50:'94158', \n",
+    "                             '51':'94188'}, inplace = True)\n",
     "x_train_df.head()"
    ]
   },
@@ -1308,16 +1360,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
+       "      <th>Tile_ID</th>\n",
+       "      <th>Long2</th>\n",
+       "      <th>Lat2</th>\n",
+       "      <th>Long1</th>\n",
+       "      <th>Lat1</th>\n",
+       "      <th>Mid_lat</th>\n",
+       "      <th>Mid_long</th>\n",
+       "      <th>Stop_Signs</th>\n",
+       "      <th>Paving_historical</th>\n",
+       "      <th>Paving_future</th>\n",
        "      <th>...</th>\n",
        "      <th>111338</th>\n",
        "      <th>111339</th>\n",
@@ -1458,26 +1510,26 @@
        "</div>"
       ],
       "text/plain": [
-       "    0           1          2           3          4          5       \\\n",
+       "   Tile_ID       Long2       Lat2       Long1       Lat1    Mid_lat  \\\n",
        "0   2176.0 -122.493927  37.716385 -122.492783  37.715481  37.715931   \n",
        "1   8372.0 -122.432358  37.729034 -122.431221  37.728130  37.728580   \n",
        "2   8602.0 -122.430077  37.729034 -122.428940  37.728130  37.728580   \n",
        "3  14611.0 -122.369652  37.806744 -122.368515  37.805840  37.806293   \n",
        "4  12070.0 -122.395874  37.712769 -122.394737  37.711864  37.712318   \n",
        "\n",
-       "       6       7       8       9       ...  111338  111339  111340  111341  \\\n",
-       "0 -122.493355     0.0     0.0     0.0  ...    50.0   142.0    81.0    86.0   \n",
-       "1 -122.431786     1.0     0.0     0.0  ...   135.0   151.0   186.0   171.0   \n",
-       "2 -122.429504     0.0     0.0     0.0  ...    49.0   255.0   225.0    34.0   \n",
-       "3 -122.369080     0.0     0.0     0.0  ...    95.0    14.0    80.0   111.0   \n",
-       "4 -122.395302     0.0     0.0     0.0  ...    59.0    87.0    56.0    66.0   \n",
+       "     Mid_long  Stop_Signs  Paving_historical  Paving_future  ...  111338  \\\n",
+       "0 -122.493355         0.0                0.0            0.0  ...    50.0   \n",
+       "1 -122.431786         1.0                0.0            0.0  ...   135.0   \n",
+       "2 -122.429504         0.0                0.0            0.0  ...    49.0   \n",
+       "3 -122.369080         0.0                0.0            0.0  ...    95.0   \n",
+       "4 -122.395302         0.0                0.0            0.0  ...    59.0   \n",
        "\n",
-       "   111342  111343  111344  111345  111346  111347  \n",
-       "0    49.0   139.0    86.0    90.0    53.0   142.0  \n",
-       "1   136.0   158.0   176.0   160.0   125.0   132.0  \n",
-       "2    49.0   255.0   225.0    34.0    49.0   255.0  \n",
-       "3    93.0    17.0    83.0   113.0    95.0    16.0  \n",
-       "4    57.0    67.0    53.0    61.0    57.0    45.0  \n",
+       "   111339  111340  111341  111342  111343  111344  111345  111346  111347  \n",
+       "0   142.0    81.0    86.0    49.0   139.0    86.0    90.0    53.0   142.0  \n",
+       "1   151.0   186.0   171.0   136.0   158.0   176.0   160.0   125.0   132.0  \n",
+       "2   255.0   225.0    34.0    49.0   255.0   225.0    34.0    49.0   255.0  \n",
+       "3    14.0    80.0   111.0    93.0    17.0    83.0   113.0    95.0    16.0  \n",
+       "4    87.0    56.0    66.0    57.0    67.0    53.0    61.0    57.0    45.0  \n",
        "\n",
        "[5 rows x 111348 columns]"
       ]
@@ -1489,7 +1541,237 @@
    ],
    "source": [
     "x_test_df = pd.DataFrame(x_test_array)\n",
+    "x_test_df.rename(columns = {0:'Tile_ID', \n",
+    "                             1:'Long2', \n",
+    "                             2:'Lat2', \n",
+    "                             3:'Long1', \n",
+    "                             4:'Lat1', \n",
+    "                             5:'Mid_lat', \n",
+    "                             6:'Mid_long',\n",
+    "                             7:'Stop_Signs', \n",
+    "                             8:'Paving_historical', \n",
+    "                             9:'Paving_future', \n",
+    "                             10:'Bus_stop',\n",
+    "                             11:'Collisions_Future', \n",
+    "                             12:'Collisions_Historical', \n",
+    "                             13:'RTTYP_I', \n",
+    "                             14:'RTTYP_M',\n",
+    "                             15:'RTTYP_O', \n",
+    "                             16:'RTTYP_S', \n",
+    "                             17:'RTTYP_U', \n",
+    "                             18:'Collisions_Future_binary',\n",
+    "                             19:'Collisions_Historical_binary', \n",
+    "                             20:'bins_numeric', \n",
+    "                             21:'zip_code', \n",
+    "                             22:'94101',\n",
+    "                             23:'94102', \n",
+    "                             24:'94104', \n",
+    "                             25:'94105', \n",
+    "                             26:'94107', \n",
+    "                             27:'94108', \n",
+    "                             28:'94109', \n",
+    "                             29:'94110', \n",
+    "                             30:'94111',\n",
+    "                             31:'94112', \n",
+    "                             32:'94114', \n",
+    "                             33:'94115', \n",
+    "                             34:'94116', \n",
+    "                             35:'94117', \n",
+    "                             36:'94118', \n",
+    "                             37:'94121', \n",
+    "                             38:'94122',\n",
+    "                             39:'94123', \n",
+    "                             40:'94124', \n",
+    "                             41:'94127', \n",
+    "                             42:'94129', \n",
+    "                             43:'94130', \n",
+    "                             44:'94131', \n",
+    "                             45:'94132', \n",
+    "                             46:'94133',\n",
+    "                             47:'94134', \n",
+    "                             48:'94141', \n",
+    "                             49:'94143', \n",
+    "                             50:'94158', \n",
+    "                             '51':'94188'}, inplace = True)\n",
+    "\n",
+    "\n",
     "x_test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e518c29c-f9de-4a94-86e3-1c95e3b472f6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8419</th>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10129</th>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7641</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5215</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7784</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      bin\n",
+       "8419    C\n",
+       "10129   B\n",
+       "7641    A\n",
+       "5215    A\n",
+       "7784    A"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_df = y_train.to_frame()\n",
+    "y_train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "62295d55-a1ff-40b8-a105-c6ba37d1627b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6011</th>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6218</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10331</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9352</th>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      bin\n",
+       "920     A\n",
+       "6011    F\n",
+       "6218    A\n",
+       "10331   A\n",
+       "9352    A"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_df = y_test.to_frame()\n",
+    "y_test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "868b5fe8-1286-4c0b-a12a-82a4b7cf1e34",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#tiles_train = pd.concat([x_train_df, y_train_df])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cea74d0d-e595-45ca-8033-f5b869d56259",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tiles_test = pd.concat([x_test_df, y_test_df])"
    ]
   },
   {
@@ -1508,17 +1790,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0cbd17c-f04c-4bb8-90f1-f85a7ddc5020",
+   "execution_count": 23,
+   "id": "9c15c471-eecd-4669-9b74-04c31796663a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/x_test.csv')\n",
-    "x_test_df.to_csv(file_path,index=False)"
+    "#from pathlib import Path\n",
+    "#file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/y_train.csv')\n",
+    "#y_train_df.to_csv(file_path,index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2dfba7d6-7dac-479d-95b7-50ad85d75b22",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#from pathlib import Path\n",
+    "#file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/tiles_test.csv')\n",
+    "#tiles_test.to_csv(file_path,index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9b24077-76ba-43f1-9c4d-ca3aba1eb420",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
